完整移植合成主机UI；添加智能总线翻页功能